[gd_scene load_steps=4 format=3 uid="uid://vc583hg1thx4"]

[ext_resource type="Texture2D" uid="uid://odble36thf7c" path="res://assets/main/intermission/bee-sheet.png" id="1_3p38t"]
[ext_resource type="Script" path="res://src/main/intermission/bee.gd" id="2_wikuy"]
[ext_resource type="Script" path="res://src/main/intermission/bee-chase-behavior.gd" id="4_kwsmh"]

[node name="Bee" type="Sprite2D"]
scale = Vector2(0.467, 0.467)
texture = ExtResource("1_3p38t")
offset = Vector2(0, -80)
hframes = 3
vframes = 4
script = ExtResource("2_wikuy")

[node name="WiggleTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="ChaseBehavior" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_kwsmh")

[node name="ThinkTimer" type="Timer" parent="ChaseBehavior"]
unique_name_in_owner = true
wait_time = 0.6

[node name="PollenationTimer" type="Timer" parent="ChaseBehavior"]
unique_name_in_owner = true
wait_time = 0.3

[connection signal="timeout" from="WiggleTimer" to="." method="_on_wiggle_timer_timeout"]
[connection signal="timeout" from="ChaseBehavior/ThinkTimer" to="ChaseBehavior" method="_on_think_timer_timeout"]
[connection signal="timeout" from="ChaseBehavior/PollenationTimer" to="ChaseBehavior" method="_on_pollenation_timer_timeout"]
